// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ListsInput component with description prop. 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-underline-2 MuiInputBase-formControl MuiInput-formControl MuiInputBase-multiline MuiInput-multiline"
    onClick={[Function]}
  >
    <textarea
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input makeStyles-input-11 makeStyles-description-15 MuiInputBase-inputMultiline MuiInput-inputMultiline"
      defaultValue="Default description value"
      disabled={false}
      id="description"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Add your description here..."
      required={false}
      rows={2}
    />
  </div>
</div>
`;

exports[`Renders ListsInput component with title prop. 1`] = `
<div
  className="MuiFormControl-root MuiFormControl-fullWidth"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-underline-2 MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input MuiInput-input makeStyles-input-11 makeStyles-title-13"
      defaultValue="Default Title"
      disabled={false}
      id="title"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Enter your title here..."
      required={false}
      type="text"
    />
  </div>
</div>
`;
